--- a/testing_focus_session/01_unit_tests/04_mocks/04_more_side_effect_usages.ipynb
+++ b/testing_focus_session/01_unit_tests/04_mocks/04_more_side_effect_usages.ipynb
@@ -5,14 +5,13 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "import itertools\n",
+    "from itertools import cycle, chain\n",
     "from mock import Mock"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
+     "name": "#%%\n"
     }
    }
   },
@@ -26,8 +25,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
+     "name": "#%%\n"
     }
    }
   },
@@ -42,8 +40,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
+     "name": "#%%\n"
     }
    }
   },
@@ -57,8 +54,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
+     "name": "#%%\n"
     }
    }
   },
@@ -72,8 +68,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
+     "name": "#%%\n"
     }
    }
   },
@@ -87,8 +82,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
+     "name": "#%%\n"
     }
    }
   },
@@ -102,8 +96,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
+     "name": "#%%\n"
     }
    }
   },
@@ -112,14 +105,13 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "pasten.side_effect =  itertools.chain([1,2], itertools.cycle([4, 6]))\n",
+    "pasten.side_effect =  chain([1,2], cycle([4, 6]))\n",
     "[pasten() for _ in range(7)] # [1, 2, 4, 6, 4, 6, 4]"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
+     "name": "#%%\n"
     }
    }
   },
@@ -155,15 +147,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
    "version": "2.7.6"
-  },
-  "pycharm": {
-   "stem_cell": {
-    "cell_type": "raw",
-    "source": [],
-    "metadata": {
-     "collapsed": false
-    }
-   }
   }
  },
  "nbformat": 4,
