--- a/testing_focus_session/01_unit_tests/04_mocks/09_specs_and_configuration.ipynb
+++ b/testing_focus_session/01_unit_tests/04_mocks/09_specs_and_configuration.ipynb
@@ -10,8 +10,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
+     "name": "#%%\n"
     }
    }
   },
@@ -25,8 +24,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
+     "name": "#%%\n"
     }
    }
   },
@@ -40,8 +38,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
+     "name": "#%%\n"
     }
    }
   },
@@ -55,8 +52,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
+     "name": "#%%\n"
     }
    }
   },
@@ -70,8 +66,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
+     "name": "#%%\n"
     }
    }
   },
@@ -85,8 +80,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
+     "name": "#%%\n"
     }
    }
   },
@@ -100,8 +94,21 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "pasten.pasten = 2"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
    }
   },
@@ -112,15 +119,16 @@
    "source": [
     "class Pasten(object):\n",
     "    def pasten(cls): pass\n",
+    "\n",
     "    def pasten2(self): pass\n",
+    "\n",
     "\n",
     "pasten = Mock(spec=Pasten)"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
+     "name": "#%%\n"
     }
    }
   },
@@ -134,8 +142,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
+     "name": "#%%\n"
     }
    }
   },
@@ -149,8 +156,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
+     "name": "#%%\n"
     }
    }
   },
@@ -164,8 +170,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
+     "name": "#%%\n"
     }
    }
   },
@@ -201,15 +206,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
    "version": "2.7.6"
-  },
-  "pycharm": {
-   "stem_cell": {
-    "cell_type": "raw",
-    "source": [],
-    "metadata": {
-     "collapsed": false
-    }
-   }
   }
  },
  "nbformat": 4,
