--- a/testing_focus_session/01_unit_tests/04_mocks/10_mocking_functions.ipynb
+++ b/testing_focus_session/01_unit_tests/04_mocks/10_mocking_functions.ipynb
@@ -11,8 +11,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
+     "name": "#%%\n"
     }
    }
   },
@@ -21,8 +20,48 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "\n"
+    "pasten.a"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "pasten()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "pasten(2)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -48,15 +87,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
    "version": "2.7.6"
-  },
-  "pycharm": {
-   "stem_cell": {
-    "cell_type": "raw",
-    "source": [],
-    "metadata": {
-     "collapsed": false
-    }
-   }
   }
  },
  "nbformat": 4,
